--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <title>Meu Projeto</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <title>Detalhe do Produto | Sua Loja</title>
+  <link rel="icon" href="favicon.ico" />
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    main { max-width: 960px; margin: auto; padding: 16px; }
+    .galeria { display: flex; gap: 12px; overflow-x: auto; }
+    .galeria img { width: 280px; height: 280px; object-fit: cover; border:1px solid #eee; }
+    .info { margin-top: 16px; }
+    .preco { font-size: 1.6rem; font-weight: 700; color:#333; }
+    .btn-comprar { background:#ffe600; padding:12px 24px; border:none; font-weight:600; margin-top:16px; width:100%; }
+  </style>
 </head>
 <body>
-  <h1>Olá, este é meu projeto!</h1>
-  <p>Coloque aqui seu código ou link para seus scripts e estilos.</p>
+  <header>
+    <a href="index.html"><img src="logo.svg" alt="Voltar à Home" /></a>
+  </header>
+
+  <main>
+    <div class="galeria">
+      <img src="assets/produto-a.jpg" alt="Produto A frente" />
+      <img src="assets/produto-a-2.jpg" alt="Produto A detalhe" />
+    </div>
+
+    <section class="info">
+      <h1>Produto A – Descrição curta</h1>
+      <p class="preco">R$ 129,90</p>
+      <p>Descrição longa do produto, especificações, materiais, garantia, etc.</p>
+      <button class="btn-comprar">Comprar agora</button>
+    </section>
+  </main>
 </body>
 </html>
