--- a/Index.html
+++ b/Index.html
@@ -5,15 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <title>Detalhe do Produto | Sua Loja</title>
   <link rel="icon" href="favicon.ico" />
+
+  <!-- Aqui está o estilo conectado -->
   <link rel="stylesheet" href="style.css" />
-  <style>
-    main { max-width: 960px; margin: auto; padding: 16px; }
-    .galeria { display: flex; gap: 12px; overflow-x: auto; }
-    .galeria img { width: 280px; height: 280px; object-fit: cover; border:1px solid #eee; }
-    .info { margin-top: 16px; }
-    .preco { font-size: 1.6rem; font-weight: 700; color:#333; }
-    .btn-comprar { background:#ffe600; padding:12px 24px; border:none; font-weight:600; margin-top:16px; width:100%; }
-  </style>
 </head>
 <body>
   <header>
