--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
 
   <main>
     <div class="galeria">
-      <img src="assets/produto-a.jpg" alt="Produto A frente" />
+      <img src="/assets/produto-a.jpg" alt="Produto A frente" />
       <img src="assets/produto-a-2.jpg" alt="Produto A detalhe" />
     </div>
 
