--- a/Index.html
+++ b/Index.html
@@ -16,8 +16,8 @@
 
   <main>
     <div class="galeria">
-      <img src="assets/produto-a.jpg" alt="Produto A frente" />
-      <img src="assets/produto-a-2.jpg" alt="Produto A detalhe" />
+      <img src="assets/produto-a.jpeg" alt="Produto A frente" />
+      <img src="assets/produto-a-2.jpeg" alt="Produto A detalhe" />
     </div>
 
     <section class="info">
