--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>
-    <a href="index.html"><img src="logo.png" alt="Voltar à Home" /></a>
+    <a href="index.html"><img src="assets/logo.png" alt="Voltar à Home" /></a>
   </header>
 
   <main>
