--- a/Index.html
+++ b/Index.html
@@ -3,14 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Samsung Galaxy A25 5G | LibreMerc</title>
+  <title>Mercado Livre</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 <body>
-  <div class="faixa-topo">
-    <p>Abra o app e ganhe frete grátis na sua primeira compra</p>
-  </div>
 
   <header>
     <img src="assets/logo.png" alt="Logo LibreMerc">
