--- a/Index.html
+++ b/Index.html
@@ -2,19 +2,25 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <title>Mercado Livre</title>
-  <!-- Meta Open Graph para WhatsApp, Facebook, LinkedIn -->
-<meta property="og:title" content="Mercado Livre - Os melhores produtos, com o melhor preço!" />
-<meta property="og:description" content="Confira já o Samsung Galaxy A25 5G e outras ofertas imperdíveis." />
-<meta property="og:image" content="https://github.com/Lana-vanuza/Novo-projeto/tree/main/assets/logo.png" />
-<meta property="og:url" content="https://mercad.netlify.app/" />
-<meta property="og:type" content="website" />
-
-
+  <link rel="icon" href="assets/logo.png" />
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+
+  <!-- Meta Open Graph para redes sociais -->
+  <meta property="og:title" content="Mercado Livre - Os melhores produtos, com o melhor preço!" />
+  <meta property="og:description" content="Confira já o Samsung Galaxy A25 5G e outras ofertas imperdíveis." />
+  <meta property="og:image" content="https://mercad.netlify.app/assets/logo.png" />
+  <meta property="og:url" content="https://mercad.netlify.app/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Meta Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Mercado Livre - Os melhores produtos, com o melhor preço!" />
+  <meta name="twitter:description" content="Veja o Samsung Galaxy A25 5G e muito mais em LibreMerc!" />
+  <meta name="twitter:image" content="https://mercad.netlify.app/assets/logo.png" />
 </head>
+  
 <body>
 
   <header>
