--- a/cep.html
+++ b/cep.html
@@ -1,28 +1,53 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Informe seu CEP - LibreMerc</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Informe seu Endereço | LibreMerc</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <main class="form-cep">
-    <h1>Informe seu CEP para calcular o frete</h1>
-    <input type="text" id="cep" placeholder="00000-000">
-    <button onclick="salvarCEP()">Salvar</button>
-  </main>
+  <header>
+    <img src="assets/logo.png" alt="Logo LibreMerc" class="logo" />
+  </header>
+
+  <div class="cep-container">
+    <h2>Informe seu endereço para entrega</h2>
+    <form id="cepForm">
+      <label for="cep">CEP:</label>
+      <input type="text" id="cep" required />
+
+      <label for="cidade">Cidade:</label>
+      <input type="text" id="cidade" required />
+
+      <label for="rua">Rua:</label>
+      <input type="text" id="rua" required />
+
+      <label for="numero">Número:</label>
+      <input type="text" id="numero" required />
+
+      <label for="bairro">Bairro:</label>
+      <input type="text" id="bairro" required />
+
+      <label for="complemento">Complemento:</label>
+      <input type="text" id="complemento" />
+
+      <button type="submit">Salvar endereço</button>
+    </form>
+  </div>
 
   <script>
-    function salvarCEP() {
+    document.getElementById("cepForm").addEventListener("submit", function (e) {
+      e.preventDefault();
+
       const cep = document.getElementById("cep").value;
-      if (cep.length >= 8) {
-        localStorage.setItem("cep", cep);
-        window.location.href = "index.html";
-      } else {
-        alert("Digite um CEP válido.");
-      }
-    }
+      const cidade = document.getElementById("cidade").value;
+
+      localStorage.setItem("cep", cep);
+      localStorage.setItem("cidade", cidade);
+
+      window.location.href = "index.html";
+    });
   </script>
 </body>
 </html>
