--- a/cep.html
+++ b/cep.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Informe seu Endereço | LibreMerc</title>
+  <title>Informe seu Endereço | Mercado Livre</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
