--- a/Index.html
+++ b/Index.html
@@ -23,19 +23,20 @@
   
 <body>
 
-  <header>
-    <img src="assets/logo.png" alt="Logo LibreMerc">
-    <div class="busca">
-      <input type="search" placeholder="Estou buscando..." />
-    </div>
-    <div class="icones">
-      <i class="fas fa-shopping-cart"></i>
-    </div>
-  </header>
+  <header>
+    <img src="assets/logo.png" alt="Logo LibreMerc" class="logo">
+    
+    <div class="header-center">
+      <input type="search" class="busca-input" placeholder="Estou buscando..." />
+      <i class="fas fa-bars menu-icon"></i>
+      <i class="fas fa-shopping-cart cart-icon"></i>
+    </div>
+  </header>
 
-  <section class="cep" id="cep-info">
-  <a href="cep.html"><i class="fas fa-map-marker-alt"></i> Informe seu CEP</a>
-</section>
+  <section class="cep-bar" id="cep-info">
+    <a href="cep.html"><i class="fas fa-map-marker-alt"></i> Informe seu CEP</a>
+  </section>
+
 
   <main class="produto-container">
     <section class="info-produto">
