--- a/cep.html
+++ b/cep.html
@@ -5,10 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Informe seu Endereço | Mercado Livre</title>
   <link rel="stylesheet" href="style.css" />
+  <!-- FontAwesome para ícones -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-pVf8OfzHCp72/YbXCNcA9wIYkKZcu/tz/0v+ZosIm0x+TI/zWmOH6Gswb3IoNz5z2Ep+XNV7B+54ep2H+z+D0w=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
 </head>
 <body>
   <header>
-    <img src="assets/logo.png" alt="Logo LibreMerc" class="logo" />
+    <img src="assets/logo-1.png" alt="Logo LibreMerc" class="logo" />
   </header>
 
   <div class="cep-container">
