--- a/Index.html
+++ b/Index.html
@@ -54,6 +54,7 @@
       <section class="galeria">
         <img src="assets/produto-a.jpeg" alt="Galaxy A25" />
       </section>
+      <div class="oferta-dia">OFERTA DO DIA</div>
 
       <div class="preco-detalhe">
         <span class="preco">R$ 1.999,00</span>
