--- a/Index.html
+++ b/Index.html
@@ -68,7 +68,7 @@
           <option>2 unidades</option>
         </select>
       </div>
-      <button class="btn-comprar">Comprar agora</button>
+      <button class="btn-comprar" onclick="window.location.href='checkout.html'">Comprar agora</button>
     </section>
 
     <section class="descricao">
