--- a/cep.html
+++ b/cep.html
@@ -5,51 +5,45 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Informe seu Endereço | Mercado Livre</title>
   <link rel="stylesheet" href="style.css" />
-  <!-- FontAwesome para ícones -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    integrity="sha512-pVf8OfzHCp72/YbXCNcA9wIYkKZcu/tz/0v+ZosIm0x+TI/zWmOH6Gswb3IoNz5z2Ep+XNV7B+54ep2H+z+D0w=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  />
 </head>
 <body>
-  <header>
-    <img src="assets/logo-1.png" alt="Logo LibreMerc" class="logo" />
+  <header class="header-site">
+    <a href="index.html" class="logo-link">
+      <img src="assets/logo-1.png" alt="Logo LibreMerc" class="logo" />
+    </a>
   </header>
 
-  <div class="cep-container">
+  <main class="container">
     <h2>Informe seu endereço para entrega</h2>
     <form id="cepForm">
       <label for="cep">CEP:</label>
-      <input type="text" id="cep" required />
+      <input type="text" id="cep" name="cep" required />
 
       <label for="cidade">Cidade:</label>
-      <input type="text" id="cidade" required />
+      <input type="text" id="cidade" name="cidade" required />
 
       <label for="rua">Rua:</label>
-      <input type="text" id="rua" required />
+      <input type="text" id="rua" name="rua" required />
 
       <label for="numero">Número:</label>
-      <input type="text" id="numero" required />
+      <input type="text" id="numero" name="numero" required />
 
       <label for="bairro">Bairro:</label>
-      <input type="text" id="bairro" required />
+      <input type="text" id="bairro" name="bairro" required />
 
       <label for="complemento">Complemento:</label>
-      <input type="text" id="complemento" />
+      <input type="text" id="complemento" name="complemento" />
 
       <button type="submit">Salvar endereço</button>
     </form>
-  </div>
+  </main>
 
   <script>
     document.getElementById("cepForm").addEventListener("submit", function (e) {
       e.preventDefault();
 
-      const cep = document.getElementById("cep").value;
-      const cidade = document.getElementById("cidade").value;
+      const cep = document.getElementById("cep").value.trim();
+      const cidade = document.getElementById("cidade").value.trim();
 
       localStorage.setItem("cep", cep);
       localStorage.setItem("cidade", cidade);
