--- a/cep.html
+++ b/cep.html
@@ -6,48 +6,43 @@
   <title>Informe seu Endereço | Mercado Livre</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
-  <header class="header-site">
-    <a href="index.html" class="logo-link">
-      <img src="assets/logo-1.png" alt="Logo LibreMerc" class="logo" />
-    </a>
-  </header>
+<body class="cep-page">
+  <a href="index.html" class="logo-link">
+    <img src="assets/logo-1.png" alt="Logo LibreMerc" class="logo" />
+  </a>
 
-  <main class="container">
+  <div class="cep-container">
     <h2>Informe seu endereço para entrega</h2>
     <form id="cepForm">
       <label for="cep">CEP:</label>
-      <input type="text" id="cep" name="cep" required />
+      <input type="text" id="cep" required />
 
       <label for="cidade">Cidade:</label>
-      <input type="text" id="cidade" name="cidade" required />
+      <input type="text" id="cidade" required />
 
       <label for="rua">Rua:</label>
-      <input type="text" id="rua" name="rua" required />
+      <input type="text" id="rua" required />
 
       <label for="numero">Número:</label>
-      <input type="text" id="numero" name="numero" required />
+      <input type="text" id="numero" required />
 
       <label for="bairro">Bairro:</label>
-      <input type="text" id="bairro" name="bairro" required />
+      <input type="text" id="bairro" required />
 
       <label for="complemento">Complemento:</label>
-      <input type="text" id="complemento" name="complemento" />
+      <input type="text" id="complemento" />
 
       <button type="submit">Salvar endereço</button>
     </form>
-  </main>
+  </div>
 
   <script>
     document.getElementById("cepForm").addEventListener("submit", function (e) {
       e.preventDefault();
-
-      const cep = document.getElementById("cep").value.trim();
-      const cidade = document.getElementById("cidade").value.trim();
-
+      const cep = document.getElementById("cep").value;
+      const cidade = document.getElementById("cidade").value;
       localStorage.setItem("cep", cep);
       localStorage.setItem("cidade", cidade);
-
       window.location.href = "index.html";
     });
   </script>
