--- a/cep.html
+++ b/cep.html
@@ -7,44 +7,64 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body class="cep-page">
-  <a href="index.html" class="logo-link">
-    <img src="assets/logo-1.png" alt="Logo LibreMerc" class="logo" />
-  </a>
 
-  <div class="cep-container">
-    <h2>Informe seu endereço para entrega</h2>
-    <form id="cepForm">
-      <label for="cep">CEP:</label>
-      <input type="text" id="cep" required />
+  <header>
+    <div class="header-content" style="background-color: #ffe600; padding: 12px 0; display: flex; justify-content: center;">
+      <a href="index.html">
+        <img src="assets/logo-1.png" alt="Logo LibreMerc" class="logo" style="height: 50px; cursor: pointer;" />
+      </a>
+    </div>
+  </header>
 
-      <label for="cidade">Cidade:</label>
-      <input type="text" id="cidade" required />
+  <main class="container">
 
-      <label for="rua">Rua:</label>
-      <input type="text" id="rua" required />
+    <div class="cep-container">
+      <h2>Informe seu endereço para entrega</h2>
+      <form id="cepForm">
+        <label for="cep">CEP:</label>
+        <input type="text" id="cep" required />
 
-      <label for="numero">Número:</label>
-      <input type="text" id="numero" required />
+        <label for="cidade">Cidade:</label>
+        <input type="text" id="cidade" required />
 
-      <label for="bairro">Bairro:</label>
-      <input type="text" id="bairro" required />
+        <label for="rua">Rua:</label>
+        <input type="text" id="rua" required />
 
-      <label for="complemento">Complemento:</label>
-      <input type="text" id="complemento" />
+        <label for="numero">Número:</label>
+        <input type="text" id="numero" required />
 
-      <button type="submit">Salvar endereço</button>
-    </form>
-  </div>
+        <label for="bairro">Bairro:</label>
+        <input type="text" id="bairro" required />
+
+        <label for="complemento">Complemento:</label>
+        <input type="text" id="complemento" />
+
+        <button type="submit">Salvar endereço</button>
+      </form>
+    </div>
+
+  </main>
 
   <script>
     document.getElementById("cepForm").addEventListener("submit", function (e) {
       e.preventDefault();
       const cep = document.getElementById("cep").value;
       const cidade = document.getElementById("cidade").value;
+      const rua = document.getElementById("rua").value;
+      const numero = document.getElementById("numero").value;
+      const bairro = document.getElementById("bairro").value;
+      const complemento = document.getElementById("complemento").value;
+
       localStorage.setItem("cep", cep);
       localStorage.setItem("cidade", cidade);
+      localStorage.setItem("rua", rua);
+      localStorage.setItem("numero", numero);
+      localStorage.setItem("bairro", bairro);
+      localStorage.setItem("complemento", complemento);
+
       window.location.href = "index.html";
     });
   </script>
+
 </body>
 </html>
